--- a/readme
+++ b/readme
@@ -3,9 +3,9 @@ Y. Sun, L. Cai, B. Liao and W. Zhu, "Minority Sub-region Estimation-based Oversa
 
 MainFunction_fig4.m：the main function to run, corresponding to the result in  fig.4  of above paper
 
-the DDMSE algorithm is consisted by three functions including MajorityreferencePointSelection.m，AreaCluster.m and SameDirection_p_to_i.m
+the DDMSE algorithm is consisted by three functions including MajorityreferencePointSelection.m, AreaCluster.m and SameDirection_p_to_i.m
 
 another file: 
 Square: one two-dimension dataset for display
-DBSCAN.m and hierarchicalClustering.m：two  clustering algorithm for comparison
+DBSCAN.m and hierarchicalClustering.m：two  clustering algorithms for comparison
 PlotClusterinResult.m：the function is used to plot the clustering result.
